--- a/mysql.ipynb
+++ b/mysql.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a4bb3079",
+   "id": "a6004659",
    "metadata": {},
    "source": [
     "# Command List:\n",
@@ -25,6 +25,7 @@
     "* cursor.fetchall()# show query result in tuple\n",
     "* cursor.execute()#all MySQL code execute through python\n",
     "* cursor.execute('show databases')#show \n",
+    "* cursor.execute('create database machine')#create database\n",
     "* create table database_name.table_name(student_id INT(10),first_name VARCHAR(30))\n",
     "* INSERT into database_name.table_name values(int, float str information)\n",
     "* DELETE from student_database.basic_data WHERE student_id=1\n",
@@ -43,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "40bae83f",
+   "id": "0e68cac6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c874155e",
+   "id": "aaaa3163",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f88b47ba",
+   "id": "443a2bda",
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +86,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de86278e",
+   "id": "74d7bd5f",
    "metadata": {},
    "source": [
     "#### cursor is a row-by-row processing; this is called pointer"
@@ -94,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "f337bc90",
+   "id": "f196b9ac",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +123,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4180dec4",
+   "id": "92c6d547",
    "metadata": {},
    "source": [
     "# Creating Tables Using Connector/Python\n",
@@ -132,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "fccaddb3",
+   "id": "0df188c5",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +153,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59dc0d43",
+   "id": "b7c299de",
    "metadata": {},
    "source": [
     "### Create table: \n",
@@ -171,7 +172,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c2851c3",
+   "id": "8034be9e",
    "metadata": {},
    "source": [
     "### show database and table"
@@ -180,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "ad24da42",
+   "id": "695edb5f",
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +203,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19c026c1",
+   "id": "979b89a5",
    "metadata": {},
    "source": [
     "### Data entry inside Table\n",
@@ -213,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "9171da72",
+   "id": "4af4b16a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "a5098e80",
+   "id": "444035ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +234,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "a1f9a80f",
+   "id": "9adf14d2",
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +260,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc084d72",
+   "id": "89c85fa2",
    "metadata": {},
    "source": [
     "#### Delete data from table"
@@ -268,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "3b1f0345",
+   "id": "11be5113",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "2b351ea2",
+   "id": "a05dd1c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,8 +513,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "id": "835906eb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n",
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "l=['sanowar','hossain']\n",
+    "for i in l:\n",
+    "    print(type(i))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b3d20f9c",
    "metadata": {},
    "outputs": [],
    "source": []
