--- a/mysql_car_glass_data.ipynb
+++ b/mysql_car_glass_data.ipynb
@@ -1,9 +1,25 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "57c5540a",
+   "metadata": {},
+   "source": [
+    "# MySQL : Glass Identification Data Set\n",
+    "https://archive.ics.uci.edu/ml/machine-learning-databases/glass/\n",
+    "* Create database\n",
+    "* Create table\n",
+    "* Insert data into table\n",
+    "* Collect data from MySQL database and load into pandas libary\n",
+    "* Create pair plot using Seaborn\n",
+    "\n",
+    "* Load CSV data into MySQL database(data type: float, list, and str)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a7ba9b2c",
+   "id": "db3d47c9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c930b10a",
+   "id": "7b857f8c",
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "380bbc12",
+   "id": "ea5106f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "f4797132",
+   "id": "88b02d1d",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "dd237cb4",
+   "id": "2c8fdf0a",
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "4ebdb242",
+   "id": "7601535d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +373,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "3c7421d1",
+   "id": "6d6f91e2",
    "metadata": {},
    "outputs": [
     {
@@ -589,7 +605,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "ecfa9dd1",
+   "id": "900a2435",
    "metadata": {},
    "outputs": [
     {
@@ -650,7 +666,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "e82dad75",
+   "id": "bdb269a5",
    "metadata": {},
    "outputs": [
     {
@@ -889,7 +905,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "830a3eb1",
+   "id": "2de0d3f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -899,7 +915,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "2807620a",
+   "id": "2ee33772",
    "metadata": {},
    "outputs": [
     {
@@ -921,7 +937,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "bc48da92",
+   "id": "412d2e34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -931,7 +947,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "ddb738af",
+   "id": "443b1008",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -941,7 +957,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "f941f09e",
+   "id": "925a84c6",
    "metadata": {},
    "outputs": [
     {
@@ -962,7 +978,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "2a6f79f2",
+   "id": "f695c6da",
    "metadata": {},
    "outputs": [
     {
@@ -985,7 +1001,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "921608b5",
+   "id": "efca8bcc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -995,7 +1011,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "0ded4ebc",
+   "id": "966aef69",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1005,7 +1021,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "be3b3ba3",
+   "id": "4bcf3053",
    "metadata": {},
    "outputs": [
     {
@@ -1132,7 +1148,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "d66d51a3",
+   "id": "a69cd884",
    "metadata": {},
    "outputs": [
     {
@@ -1166,7 +1182,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "a7c5fb83",
+   "id": "f8bea77d",
    "metadata": {},
    "outputs": [
     {
@@ -1187,7 +1203,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "4b89fd1a",
+   "id": "5892571e",
    "metadata": {},
    "outputs": [
     {
@@ -1208,7 +1224,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df09154a",
+   "id": "a400689e",
    "metadata": {},
    "outputs": [],
    "source": []
